# SistemaDeProvas

./: .gitignore  CMakeLists.txt  README.md
include/: TelaTurmaProfessor.hpp
include/business/: application.hpp
include/business/DAO/: AlunoDAO.hpp  BaseDAO.hpp  ProfessorDAO.hpp  TurmaDAO.hpp  UsuarioDAO.hpp
include/business/Modelo/: alternativa.hpp  aluno.hpp  professor.hpp  prova.hpp  provaResolvida.hpp  questao.hpp  question.hpp  status.hpp  test.hpp  tipoUsuario.hpp  turma.hpp  usuario.hpp
include/business/fachadas/: manterAluno.hpp  manterProfessor.hpp  manterTurma.hpp  manterUsuario.hpp
include/business/fachadas/excecoes/: AlunoNotFoundException.hpp  ProfessorNotFoundException.hpp  TurmaNotFoundException.hpp  UserNotFoundException.hpp
include/business/gui/: UserGUI.hpp
include/gui/: SistemaAluno.hpp  SistemaProfessor.hpp  SistemaUsuario.hpp  TelaLogin.hpp  TelaPerfil.hpp  TelaProvaEscolhidaProfessor.hpp  TelaTurmaEscolhidaAluno.hpp  TelaTurmaEscolhidaProfessor.hpp  TelaTurmasAluno.hpp  TelaTurmasProfessor.hpp  TerminalUteis.hpp  UserTerminalGUI.hpp
include/persistence/: Inicializador.hpp
include/persistence/DAO/: JSONFileHandler.hpp  JSONObject.hpp  TurmaDAOJSON.hpp  UsuarioDAOJSON.hpp  dummy.txt
src/: CMakeLists.txt  SistemaDeProvasCPP.cpp  SistemaDeProvasCPP.h  main.cpp
src/DAO/: AlunoDAO.cpp
src/DAO/Headers/: AlunoDAO.h  BaseDAO.h  MateriaDAO.h
src/Modelo/: Alternativa.cpp  Aluno.cpp  Materia.cpp  Professor.cpp  ProvaDaMateria.cpp  ProvaResolvida.cpp  Questao.cpp
src/business/: application.cpp
src/business/DAO/: AlunoDAO.cpp  BaseDAO.cpp  ProfessorDAO.cpp  TurmaDAO.cpp  UsuarioDAO.cpp
src/business/Modelo/: alternativa.cpp  aluno.cpp  professor.cpp  prova.cpp  provaResolvida.cpp  questao.cpp  question.cpp  test.cpp  turma.cpp  usuario.cpp
src/business/fachadas/: manterAluno.cpp  manterProfessor.cpp  manterTurma.cpp  manterUsuario.cpp
src/business/fachadas/excecoes/: AlunoNotFoundException.cpp  ProfessorNotFoundException.cpp  TurmaNotFoundException.cpp  UserNotFoundException.cpp
src/business/gui/: UserGUI.cpp
src/gui/: SistemaAluno.cpp  SistemaProfessor.cpp  SistemaUsuario.cpp  TelaLogin.cpp  TelaPerfil.cpp  TelaProvaEscolhidaProfessor.cpp  TelaTurmaEscolhidaAluno.cpp  TelaTurmaEscolhidaProfessor.cpp  TelaTurmaProfessor.cpp  TelaTurmasAluno.cpp  TelaTurmasProfessor.cpp  TerminalUteis.cpp  UserTerminalGUI.cpp
src/persistence/: Inicializador.cpp
src/persistence/DAO/: JSONFileHandler.cpp  JSONObject.cpp  TurmaDAOJSON.cpp  UsuarioDAOJSON.cpp
